domain/src/com/example/domain/category/errors/CategoryError.java
package com.example.domain.category.errors;

import com.example.common.types.BusinessError;

public class CategoryError implements BusinessError {
}
